# agent-trust-fabric

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
decisions/: 0001-design-criteria.md
docs/: vision.md
docs/specs/: 2026-05-23-atf-design.md
examples/coding_to_image/: README.md
reference/py/: pyproject.toml
reference/py/examples/coding_to_image/: run.py
reference/py/src/atf/: __init__.py  _b64.py  _signing.py  agent.py  audit.py  cli.py  delegation.py  errors.py  identity.py  manifest.py  outcome.py  wire.py
reference/py/tests/: test_audit.py  test_delegation.py  test_e2e.py  test_identity.py  test_manifest.py  test_outcome.py
