[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atf"
version = "0.1.0"
description = "agent-trust-fabric — neutral OSS substrate for AI agent collaboration"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "ATF Contributors" }]
dependencies = [
    "cryptography>=42",
    "pydantic>=2.5",
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "hypothesis>=6",
]

[project.scripts]
atf = "atf.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
